--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name":"chzzk",
+    "name": "chzzk",
     "version": "1.0.0",
     "main": "server/index.js",
     "scripts": {
-      "start": "node server/index.js"
+        "start": "node server/index.js"
     },
-
-  "dependencies": {
-    "express": "^5.1.0",
-    "node-media-server": "^4.0.21",
-    "socket.io": "^4.8.1"
-  }
+    "dependencies": {
+        "express": "^5.1.0",
+        "node-media-server": "^4.0.21",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1"
+    }
 }
